--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.7",
+    "i18next": "^21.8.11",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "jwt-decode": "^3.1.2",
     "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^11.17.3",
+    "react-icons": "^4.4.0",
+    "react-phone-number-input": "^3.2.3",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "tailwind-scrollbar": "^1.3.1",
     "web-vitals": "^2.1.0"
