--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "i18next": "^21.8.11",
     "i18next-browser-languagedetector": "^6.1.4",
     "jwt-decode": "^3.1.2",
@@ -19,7 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.17.3",
     "react-icons": "^4.4.0",
-    "react-phone-number-input": "^3.2.3",
+    "react-phone-number-input": "^3.2.6",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-router-hash-link": "^2.4.3",
