--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "html-react-parser": "^3.0.4",
     "i18next": "^21.8.11",
     "i18next-browser-languagedetector": "^6.1.4",
     "jwt-decode": "^3.1.2",
@@ -21,6 +22,7 @@
     "react-i18next": "^11.17.3",
     "react-icons": "^4.4.0",
     "react-phone-number-input": "^3.2.6",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-router-hash-link": "^2.4.3",
