--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "flutterwave-react-v3": "^1.2.1",
     "html-react-parser": "^3.0.4",
     "i18next": "^21.8.11",
     "i18next-browser-languagedetector": "^6.1.4",
