--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.3.3",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "slick-carousel": "^1.8.1",
