--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.17.3",
     "react-icons": "^4.4.0",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-phone-number-input": "^3.2.6",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
