--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.18",
+    "string-similarity": "^4.0.4",
     "uuid": "^8.3.2"
   }
 }
